--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         gtag('config', 'G-J229PTPG5M');
     </script>
+    <meta name="google-adsense-account" content="ca-pub-4131495586720086">
 </head>
 
 <body>
